--- a/online_store/package.json
+++ b/online_store/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.12.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.63.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
