--- a/online_store/.eslintrc.json
+++ b/online_store/.eslintrc.json
@@ -10,6 +10,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "react/prop-types": 0
     }
 }
