--- a/online_store/.eslintrc.json
+++ b/online_store/.eslintrc.json
@@ -5,8 +5,7 @@
         "node": true
     },
     "extends": [
-        "airbnb",
-        "prettier"
+        "airbnb"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
