--- a/online_store/.eslintrc.json
+++ b/online_store/.eslintrc.json
@@ -5,14 +5,16 @@
         "node": true
     },
     "extends": [
-        "airbnb"
+        "eslint:recommended",
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
-        "linebreak-style": 0,
-        "react/prop-types": 0
     }
 }
